<resources>
    <string name="app_name">Note to Self</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>

    <string name="action_add">add</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="idea_text">Idea</string>
    <string name="important_text">Important</string>
    <string name="todo_text">Todo</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="settings_title">Settings</string>
    <string name="theme_title" translatable="false">Theme</string>
    <string name="theme_light" translatable="false">Light</string>
    <string name="theme_dark" translatable="false">Dark</string>
    <string name="todo_list">Todo-Lists</string>
    <string name="delete_message">Do you really want to delete this Todo?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_done">Todo has been delete successfully!</string>
    <string name="channel_name" translatable="false">TODO-List</string>
    <string name="channel_description" translatable="false">TODO-List\'s notification channel.</string>

    <string name="add_description" translatable="false">Add a task with a title and deadline and optional description</string>
    <string name="time_hint" translatable="false">Time</string>
    <string name="GoBack" translatable="false">Back to previous page</string>
    <string name="deleteTodo" translatable="false">Delete this Todo</string>
    <string name="editTodo" translatable="false">Edit this Todo</string>
    <string name="checkTitle" translatable="false">Title can\'t be empty!</string>
    <string name="checkTime" translatable="false">Time can\'t be empty!</string>
    <string name="add_todo">Add a new Todo</string>

    <string name="show_dividers" translatable="false">Show Dividers</string>
    <string name="caring_mode" translatable="false">Caring Mode</string>
    <string name="dividers_description" translatable="false">Show lines between Todos</string>
    <string name="caring_mode_description" translatable="false">Enlarge the letters for easier reading</string>
</resources>