<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color2">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="295dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/title_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine|textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTime"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/time_hint"
                android:inputType="textMultiLine|textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <ImageButton
                    android:id="@+id/btnCancel"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/cancel"
                    android:contentDescription="@string/no" />

                <ImageButton
                    android:id="@+id/btnNewOK"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="50dp"
                    android:background="@drawable/ok"
                    android:contentDescription="@string/yes"
                    android:layoutDirection="locale" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>